      vmware and xen and architecture flags, are always included in a group
      flavor. (CNY-1641)
    * The Conary client is now able to access the network using
      authenticated HTTP proxies. (CNY-1687)

  o Internal Changes:
    * Flags for update jobs changed from a bitmask to a class
    * Removed vestigal support for file label priority paths

  o Bug fixes:
    * Patch code no longer fails when trailing context is missing at the
      end of the file. (CNY-1638)
    * Files with no permissions set (chmod 0) confused Conary due to
      improper checks for None. (CNY-1678)
    * Errors in the changeset downloading code are no longer ignored by the
      client. (CNY-1682)
    * An error in the resumption of a build has been fixed. (CNY-1684)

Changes in 1.1.26:
  o New Features:
    * The listcachedir script has been added to help with maintenance
      tasks for the repository changeset cache. (CNY-1469)
    * Conary proxies are now adding an HTTP Via: header. (CNY-1604)

  o Internal Changes:
    * Creating changesets supports a 'mirrorMode', which includes file
      contents of files if their version has changed (even if the sha1
      of those contents are the same). Mirroring uses this to ensure
      complete contents. (CNY-1570)

  o Client Changes:
    * A potential race condition where an update could change the state
      of the Conary database while the rollback code is executing has
      been fixed. Note that as part of the fix for CNY-1591, the update
      and rollback operations cannot commit at the same time; the fix
      further ensures long-running operations detect the state change.
      (CNY-1624)

  o Bug fixes:
    * Manipulating source components now works better when a source
      component has been marked removed.
    * A problem related to the way shim clients use the ServerProxy
      object has been fixed. (CNY-1668)

Changes in 1.1.25:
  o New Feature:
    * Conary now supports a "searchPath" configuration option, which