@@ -12,6 +12,10 @@ Changes in @NEW@:
     * Flags for update jobs changed from a bitmask to a class
     * Removed vestigal support for file label priority paths
 
+  o Build Changes:
+    * A new recipe method, r.MakeFIFO(), is available which will create a named
+      pipe at a specified location. (CNY-1597).
+
   o Bug fixes:
     * Patch code no longer fails when trailing context is missing at the
       end of the file. (CNY-1638)
